syntax = "proto3";
package dymensionxyz.dymension.bridgingfee;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/bridgingfee/types";

message HLAssetFee {
  // Hyperlane token ID
  // https://docs.hyperlane.xyz/docs/alt-vm-implementations/cosmos-sdk#x%2Fwarp
  string tokenID = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // A fee for bridging the token to the Hub
  string inbound_fee = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // A fee for bridging the token from the Hub
  string outbound_fee = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message HLFeeHook {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated HLAssetFee fees = 3 [ (gogoproto.nullable) = false ];
}

message AggregationHook {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated string hookIds = 3 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
}
